<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.4</version>
        <relativePath/>
    </parent>

    <groupId>com.logilong</groupId>
    <artifactId>liveplatform</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>live-user-interface</module>
        <module>live-user-provider</module>
        <module>live-api</module>
        <module>live-common-interface</module>
        <module>live-framework</module>
        <module>live-id-generate-interface</module>
        <module>live-id-generate-provider</module>
        <module>live-gateway</module>
        <module>live-account-interface</module>
        <module>live-account-provider</module>
        <module>live-msg-interface</module>
        <module>live-msg-provider</module>
        <module>live-im-core-server</module>
        <module>live-im-core-server-interfaces</module>
        <module>live-im-interface</module>
        <module>live-im-provider</module>
        <module>live-im-router-interface</module>
        <module>live-im-router-provider</module>
        <module>live-bank-interface</module>
        <module>live-living-interface</module>
        <module>live-living-provider</module>
        <module>live-gift-interface</module>
        <module>live-gift-provider</module>
        <module>live-bank-provider</module>
        <module>live-bank-api</module>
    </modules>

    <properties>
        <mysql.version>8.0.29</mysql.version>
        <springboot.version>3.0.4</springboot.version>
        <curator.version>2.12.0</curator.version>
        <mybatis-plus.version>3.5.3</mybatis-plus.version>
        <druid.version>1.1.20</druid.version>
        <sharding.jdbc.version>5.3.2</sharding.jdbc.version>
        <hessian.version>4.0.38</hessian.version>
        <jetty.version>9.4.28.v20200408</jetty.version>
        <jakarta-annotation.version>2.1.1</jakarta-annotation.version>
        <dubbo.version>3.3.2</dubbo.version>
        <redis.version>3.0.4</redis.version>
        <rocketmq.version>5.2.0</rocketmq.version>
        <spring-cloud-alibaba.version>2022.0.0.0-RC1</spring-cloud-alibaba.version>
        <spring-cloud-starter-gateway.version>4.0.6</spring-cloud-starter-gateway.version>
        <spring-cloud-starter-loadbalancer.version>4.0.3</spring-cloud-starter-loadbalancer.version>
        <spring-cloud-starter-bootstrap.version>3.0.2</spring-cloud-starter-bootstrap.version>
        <alibaba-fastjson.version>2.0.10</alibaba-fastjson.version>
        <netty-all.version>4.1.122.Final</netty-all.version>
        <lombook.version>1.18.30</lombook.version>
        <slf4j.version>2.0.6</slf4j.version>
        <cloopen-sms.version>1.0.4</cloopen-sms.version>
        <calcite-core.version>1.32.0</calcite-core.version>
        <caffeine.version>2.6.2</caffeine.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


</project>
